--- a/pages/booth.html
+++ b/pages/booth.html
@@ -54,7 +54,7 @@
             <!-- #EndLibraryItem -->
             <div id="feature">
                 <img class="" src="../images/banners/home.png" alt="">
-                <img class="banner" src="../images/header/reins.png" alt="">
+                <img class="banner1" src="../images/header/reins.png" alt="">
                 <table>
                     <tr>
                         <td><h2>Wells Fargo Booth</h2></td>
