--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -54,7 +54,7 @@
             <!-- #EndLibraryItem -->
             <div id="feature">
                 <img class="" src="../images/banners/home.png" alt="">
-                <img class="banner" src="../images/header/reins.png" alt="">
+                <img class="banner1" src="../images/header/reins.png" alt="">
                 <table>
                 <tr>
                     <td colspan="4"><h2>Sibos Speakers</h2>
@@ -134,7 +134,6 @@
                 <div class="popup">
                     <video id="george_vid" class="video-js vjs-default-skin" controls preload="" width="853" height="480" poster="">
                         <source src="../media/George_Doolittle-SIBOS_promo.mp4" type='video/mp4'>
-                        <track kind="captions" src="../media/George_Doolittle-SIBOS_promo.txt" srclang="en" label="English">
                     </video>
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE
@@ -142,7 +141,6 @@
                 <div class="popup">
                     <video id="steve_vid" class="video-js vjs-default-skin" controls preload="" width="853" height="480" poster="">
                         <source src="../media/Steve_Ellis-SIBOS_promo.mp4" type='video/mp4'>
-                        <track kind="captions" src="../media/Steve_Ellis-SIBOS_promo.txt" srclang="en" label="English">
                     </video>
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE
