--- a/pages/about.html
+++ b/pages/about.html
@@ -18,43 +18,37 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="all">
+        <div id="Page">
             <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
-            <div id="head">
+            <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
                     <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
                 </div>
                 <div class="navb">
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="home.html">Home</a>
-                    <!--
-                    -->
+                    <!-- -->
                     <a href="about.html">About Wells Fargo</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="events.html">Sibos Events</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="booth.html">Wells Fargo Booth</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="speakers.html">Sibos Speakers</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="explore.html">Explore Dubai</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="giving.html">Charitable giving</a>
-                    <!--
-                    -->
+                    <!--  -->
                 </div>
-            </div>
+            </header>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="" src="../images/banners/aboutWellsFargoPage.png" alt="">
-                <img class="banner" src="../images/header/reins.png" alt="">
+                <section id="Banner">
+                    <img class="" src="../images/banners/aboutWellsFargoPage.png" alt="">
+                    <img class="banner" src="../images/header/reins.png" alt="">
+                </section>
                 <table>
                     <tr>
                         <td width="65%"><h2>About Wells Fargo</h2></td>
@@ -99,8 +93,8 @@
                     </tr>
                 </table>
             </div>
-            <em></em><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
-            <div id="footer">
+            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            <footer>
                 <div id="sharebar">
                     <!-- <script src="http://w.sharethis.com/button/buttons.js"></script> -->
                     <p class="cap">Share this page
@@ -120,13 +114,8 @@
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
-            </div>
+            </footer>
             <!-- #EndLibraryItem -->
         </div>
-        <script type="text/javascript">
-            $('.exhibits').click(function(){
-                //$(this).fancyzoom();
-            });
-        </script>
     </body>
 </html>
