--- a/pages/booth.html
+++ b/pages/booth.html
@@ -18,46 +18,40 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="all">
+        <div id="Page">
             <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
-            <div id="head">
+            <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
                     <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
                 </div>
                 <div class="navb">
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="home.html">Home</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="about.html">About Wells Fargo</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="events.html">Sibos Events</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="booth.html">Wells Fargo Booth</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="speakers.html">Sibos Speakers</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="explore.html">Explore Dubai</a>
-                    <!--
-                    -->
+                    <!--  -->
                     <a href="giving.html">Charitable giving</a>
-                    <!--
-                    -->
+                    <!--  -->
                 </div>
-            </div>
+            </header>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="" src="../images/banners/home.png" alt="">
-                <img class="banner1" src="../images/header/reins.png" alt="">
+                <section id="Banner">
+                    <img class="" src="../images/banners/home.png" alt="">
+                    <img class="banner1" src="../images/header/reins.png" alt="">
+                </section>
                 <table>
                     <tr>
-                        <td><h2>Wells Fargo Booth</h2></td>
+                        <td colspan="2"><h2>Wells Fargo Booth</h2></td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
@@ -65,26 +59,29 @@
                                 experience like no other. We look forward to seeing you at booth <u>No.
                         F87</u>.</p>
                     <p><strong>Learn. </strong>Stop by to take your picture in front of the
-                        Buffalo Bill stagecoach and learn more about the history of Wells Fargo.<br>
-                        <strong>Explore. </strong>Experience all the exciting new enhancements
-                        we&rsquo;ve made to our Sibos booth this year.<br>
-                        <strong>Connect.</strong> Our senior leadership and relationship managers look
+                        Buffalo Bill stagecoach and learn more about the history of Wells Fargo.</p>
+                    <p><strong>Explore. </strong>Experience all the exciting new enhancements
+                        we&rsquo;ve made to our Sibos booth this year.</p>
+                    <p><strong>Connect.</strong> Our senior leadership and relationship managers look
                         forward to connecting with you in our booth. </p>
-                    <p>(link to exhibition floor map)  (include booth pictures)<br>
-                        <a title="booth_map" class="popup pic"
-                           href="../images/misc/booth_map.gif">View exhibition floor map</a> | <a
-                           title="rendered_booth" class="popup pic"
-                           href="../images/misc/rendered_booth.jpg">View Wells Fargo booth
+                    <p><a title="booth_map" class="popup pic"
+                          href="../images/misc/booth_map.pdf">View exhibition floor map</a> | <a
+                          title="rendered_booth" class="popup pic"
+                          href="../images/misc/rendered_booth.jpg">View Wells Fargo booth
                             rendering</a></p></td>
-                    <td width="30%"><p><strong>&lt;tile ad for booth check in gift&gt;</strong><br>
-                            <strong>Want one of these? (image of 3 in 1 phone charger booth giveaway)</strong></p>
-                        <p>Check into our booth via Foursquare or your LinkedIn account and receive a
-                            3 in 1 phone charger while supplies last. You can also tweet about us via
-                            Twitter to receive your free gift.</p></td>
+                    <td>&nbsp;</td>
+                    <td width="33%"><p>
+                            <img src="../images/pix/tile_booth_giveaway.png" width="320" height="254" alt="Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
+                        </p></td>
+                    </tr>
+                    <tr>
+                        <td width="55%">&nbsp;</td>
+                        <td width="4%">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
                     </tr>
                 </table>
-                <p class="shrink">*You may need Adobe Reader to read PDF files. <a
-                        href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
+                <p class="shrink">*You may need a reader to view PDF files. <a
+                        href="https://www.google.com/search?q=free+pdf+viewer">Download</a> one for free.</p>
                 <div class="popup">
                     <img id="booth_map" src="../images/misc/booth_map.gif" width="1000" tabindex="-1">
                     <br>
@@ -113,7 +110,7 @@
                 </div>
             </div>
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
-            <div id="footer">
+            <footer>
                 <div id="sharebar">
                     <!-- <script src="http://w.sharethis.com/button/buttons.js"></script> -->
                     <p class="cap">Share this page
@@ -133,7 +130,7 @@
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
-            </div>
+            </footer>
             <!-- #EndLibraryItem -->
         </div>
     </body>
