--- a/pages/booth.html
+++ b/pages/booth.html
@@ -18,8 +18,7 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page">
-            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -43,8 +42,7 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem -->
-            <div id="feature">
+            <!-- #EndLibraryItem --><div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/home.png" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
@@ -95,7 +93,6 @@
                 <div class="popup">
                     <video id="george_vid" class="video-js vjs-default-skin" controls preload="" width="853" height="480" poster="">
                         <source src="../media/George_Doolittle-SIBOS_promo.mp4" type='video/mp4'>
-                        <track kind="captions" src="../media/George_Doolittle-SIBOS_promo.txt" srclang="en" label="English">
                     </video>
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE
@@ -103,35 +100,31 @@
                 <div class="popup">
                     <video id="steve_vid" class="video-js vjs-default-skin" controls preload="" width="853" height="480" poster="">
                         <source src="../media/Steve_Ellis-SIBOS_promo.mp4" type='video/mp4'>
-                        <track kind="captions" src="../media/Steve_Ellis-SIBOS_promo.txt" srclang="en" label="English">
                     </video>
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE
                 </div>
-            </div>
-            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
-                    <!-- <script src="http://w.sharethis.com/button/buttons.js"></script> -->
                     <p class="cap">Share this page
-                        <!-- -->
+                        <!--  -->
                         <span id="st_twitter"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_linkedin"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_email"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_facebook"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_googleplus"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_pinterest"></span>
-                        <!-- -->
+                        <!--  -->
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem -->
-        </div>
+            <!-- #EndLibraryItem --></div>
     </body>
 </html>
