--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -18,8 +18,7 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page">
-            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -43,76 +42,75 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem -->
-            <div id="feature">
+            <!-- #EndLibraryItem --><div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/home.png" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
-                <tr>
-                    <td colspan="4"><h2>Sibos Speakers</h2>
-                        <p>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</p></td>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td class="blocks"><p><strong>Mobile banking: New technologies that improve the customer experience</strong><br>
-                            <strong>Tuesday, September 17</strong><br>
-                            <strong>4:00 pm to 5:00 pm</strong><br>
-                            <strong>Conference room 3 - CR3</strong><br>
-                            Featuring: Mike Kennedy, head of Innovation and
-                            Payments Strategy (insert picture of Mike and <a
+                    <tr>
+                        <td colspan="4"><h2>Sibos Speakers</h2>
+                            <p>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</p></td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td class="blocks"><p><strong>Mobile banking: New technologies that improve the customer experience</strong><br>
+                                <strong>Tuesday, September 17</strong><br>
+                                <strong>4:00 pm to 5:00 pm</strong><br>
+                                <strong>Conference room 3 - CR3</strong><br>
+                                Featuring: Mike Kennedy, head of Innovation and
+                                Payments Strategy (insert picture of Mike and <a
                                     href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/KennedyMichaelBio.pdf">link
-                                to Mike&rsquo;s bio</a>)</p>
-                        <p> How to generate value and develop an
-                            infrastructure that supports the strategic use of
-                            gamification and social media to improve the customer
-                            experience. </p>
-                    <td>&nbsp;</td>
-                    <td class="blocks"><p><strong>&lt;placeholder for tile ad&gt;</strong><br>
-                             Share your pony story with us <br>
-                            #WFpony</p>
-                        <p class="hide">How is the role of an IT leader changing to meet the challenges of delivering operational excellence in a world of ever-growing
-                            demands and relentless volatility? What is the impact of cultural, technology, and generation shifts? What skills and
-                            leadership styles do brave new leaders need to embrace and how is that different from the past?</p></td>
-                    <td>&nbsp;</td>
-                    <td class="blocks"><p><strong>Risk management: From grapple to grip</strong><br>
-                            <strong>Wednesday, September 18</strong><br>
-                            <strong>2:00 pm to 3:00 pm</strong><br>
-                            <strong>Conference room 1 - CR1 </strong><br>
-                            Featuring: Tom Lickiss, head of Business Risk for
-                            GFI (insert picture of Tom and link to <a
+                                    to Mike&rsquo;s bio</a>)</p>
+                            <p> How to generate value and develop an
+                                infrastructure that supports the strategic use of
+                                gamification and social media to improve the customer
+                                experience. </p>
+                        <td>&nbsp;</td>
+                        <td class="blocks"><p><strong>&lt;placeholder for tile ad&gt;</strong><br>
+                                 Share your pony story with us <br>
+                                #WFpony</p>
+                            <p class="hide">How is the role of an IT leader changing to meet the challenges of delivering operational excellence in a world of ever-growing
+                                demands and relentless volatility? What is the impact of cultural, technology, and generation shifts? What skills and
+                                leadership styles do brave new leaders need to embrace and how is that different from the past?</p></td>
+                        <td>&nbsp;</td>
+                        <td class="blocks"><p><strong>Risk management: From grapple to grip</strong><br>
+                                <strong>Wednesday, September 18</strong><br>
+                                <strong>2:00 pm to 3:00 pm</strong><br>
+                                <strong>Conference room 1 - CR1 </strong><br>
+                                Featuring: Tom Lickiss, head of Business Risk for
+                                GFI (insert picture of Tom and link to <a
                                     href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/lickissthomasbio.pdf">Tom&rsquo;s
-                                bio</a>)<br>
-                            Banks are exposed to a wide and
-                            increasing range of risks that can have an impact
-                            on their reputation. The panel will discuss how
-                            banks apply a risk-based approach to measure and
-                            mitigate their liabilities. How do they move from
-                            understanding risk to applying controls in line
-                            with their risk appetite? How can they benchmark
-                            their policies and procedures with global best
-                            practices?</p>
-                        <p>You&rsquo;ll find more information about these
-                            sessions – including the full Sibos conference program
-                            – at sibos.com. <a
+                                    bio</a>)<br>
+                                Banks are exposed to a wide and
+                                increasing range of risks that can have an impact
+                                on their reputation. The panel will discuss how
+                                banks apply a risk-based approach to measure and
+                                mitigate their liabilities. How do they move from
+                                understanding risk to applying controls in line
+                                with their risk appetite? How can they benchmark
+                                their policies and procedures with global best
+                                practices?</p>
+                            <p>You&rsquo;ll find more information about these
+                                sessions – including the full Sibos conference program
+                                – at sibos.com. <a
                                     href="http://www.sibos.com/conference/sessions.page?navtab=tab2">http://www.sibos.com/conference/sessions.page?navtab=tab2</a></p>
-                        <p class="hide">How is the role of an IT leader
-                            changing to meet the challenges of delivering
-                            operational excellence in a world of ever-growing
-                            demands and relentless volatility? What is the impact
-                            of cultural, technology, and generation shifts? What
-                            skills and leadership styles do brave new leaders need
-                            to embrace and how is that different from the
-                            past?</p></td>
-                </tr>
-                <tr>
-                    <td width="33%">
-                    <td width="1%">&nbsp;</td>
-                    <td width="33%">&nbsp;</td>
-                    <td width="1%">&nbsp;</td>
-                    <td width="33%">&nbsp;</td>
-                </tr>
+                            <p class="hide">How is the role of an IT leader
+                                changing to meet the challenges of delivering
+                                operational excellence in a world of ever-growing
+                                demands and relentless volatility? What is the impact
+                                of cultural, technology, and generation shifts? What
+                                skills and leadership styles do brave new leaders need
+                                to embrace and how is that different from the
+                                past?</p></td>
+                    </tr>
+                    <tr>
+                        <td width="33%">
+                        <td width="1%">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
+                        <td width="1%">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
+                    </tr>
                 </table>
                 <p class="shrink">*You may need Adobe Reader to read PDF files. <a href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
                 <div class="popup">
@@ -139,30 +137,27 @@
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE
                 </div>
-            </div>
-            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
-                    <!-- <script src="http://w.sharethis.com/button/buttons.js"></script> -->
                     <p class="cap">Share this page
-                        <!-- -->
+                        <!--  -->
                         <span id="st_twitter"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_linkedin"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_email"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_facebook"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_googleplus"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_pinterest"></span>
-                        <!-- -->
+                        <!--  -->
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem -->
-        </div>
+            <!-- #EndLibraryItem --></div>
     </body>
 </html>
