--- a/pages/about.html
+++ b/pages/about.html
@@ -18,8 +18,7 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page">
-            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -28,7 +27,7 @@
                 <div class="navb">
                     <!--  -->
                     <a href="home.html">Home</a>
-                    <!-- -->
+                    <!--  -->
                     <a href="about.html">About Wells Fargo</a>
                     <!--  -->
                     <a href="events.html">Sibos Events</a>
@@ -43,8 +42,7 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem -->
-            <div id="feature">
+            <!-- #EndLibraryItem --><div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/aboutWellsFargoPage.png" alt="">
                     <img class="banner" src="../images/header/reins.png" alt="">
@@ -92,30 +90,27 @@
                         <td>&nbsp;</td>
                     </tr>
                 </table>
-            </div>
-            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
-                    <!-- <script src="http://w.sharethis.com/button/buttons.js"></script> -->
                     <p class="cap">Share this page
-                        <!-- -->
+                        <!--  -->
                         <span id="st_twitter"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_linkedin"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_email"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_facebook"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_googleplus"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_pinterest"></span>
-                        <!-- -->
+                        <!--  -->
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem -->
-        </div>
+            <!-- #EndLibraryItem --></div>
     </body>
 </html>
