--- a/pages/events.html
+++ b/pages/events.html
@@ -18,8 +18,7 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page">
-            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -43,55 +42,54 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem -->
-            <div id="feature">
+            <!-- #EndLibraryItem --><div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/sibosEventsPage.png" alt="">
                     <img class="banner" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
-                <tr>
-                    <td colspan="2"><h2>Sibos Events</h2>
-                        <p>Renew friendships and create new ones.
-                            We&rsquo;re proud to be hosting our annual Sibos
-                            Celebration reception at Dubai&rsquo;s most
-                            prestigious landmark – Burj Khalifa – the tallest
-                            structure in the world. In addition, we&rsquo;ll
-                            be hosting a welcome reception at the Wells Fargo
-                            Sibos booth and a breakfast seminar on
-                            &ldquo;Rapidly evolving payment and trade
-                            corridors.&rdquo; Please contact your Wells Fargo
-                            GFI relationship manager for more details about
-                            any of these events. We hope you can join us at
-                            one of these events. </p></td>
-                    <td width="30%">&nbsp;</td>
-                </tr>
-                <tr>
-                    <td width="33%" class="blocks">
-                    <td colspan="2" class="blocks"><p><strong>Sunday, September 15 </strong><br>
-                            <strong>4:00 p.m. to 7:00 </strong><strong>p.m.</strong> <br>
-                            Annual Sibos Celebration <br>
-                            Armani Hotel in Burj Khalifa </p>
-                        <p><strong>Tuesday, September 17</strong><br>
-                            <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
-                            Booth Reception (link to HTML invite) <br>
-                            Wells Fargo booth No. F87, Exhibition Hall Zone B (link to WF booth section) </p>
-                        <p><strong>Wednesday, September 18</strong><br>
-                            <strong>7:30 a.m. to 8:30
-                            a.m.</strong><br>
-                            &ldquo;Rapidly evolving payment and trade corridors&rdquo;
-                            (link to HTML invite) <br>
-                            Space is limited, so please speak to your
-                            relationship manager about availability. </p>
-                        <p class="hide">How is the role of an IT leader
-                            changing to meet the challenges of delivering
-                            operational excellence in a world of ever-growing
-                            demands and relentless volatility? What is the
-                            impact of cultural, technology, and generation
-                            shifts? What skills and leadership styles do brave
-                            new leaders need to embrace and how is that
-                            different from the past?</p></td>
-                </tr>
+                    <tr>
+                        <td colspan="2"><h2>Sibos Events</h2>
+                            <p>Renew friendships and create new ones.
+                                We&rsquo;re proud to be hosting our annual Sibos
+                                Celebration reception at Dubai&rsquo;s most
+                                prestigious landmark – Burj Khalifa – the tallest
+                                structure in the world. In addition, we&rsquo;ll
+                                be hosting a welcome reception at the Wells Fargo
+                                Sibos booth and a breakfast seminar on
+                                &ldquo;Rapidly evolving payment and trade
+                                corridors.&rdquo; Please contact your Wells Fargo
+                                GFI relationship manager for more details about
+                                any of these events. We hope you can join us at
+                                one of these events. </p></td>
+                        <td width="30%">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td width="33%" class="blocks">
+                        <td colspan="2" class="blocks"><p><strong>Sunday, September 15 </strong><br>
+                                <strong>4:00 p.m. to 7:00 </strong><strong>p.m.</strong> <br>
+                                Annual Sibos Celebration <br>
+                                Armani Hotel in Burj Khalifa </p>
+                            <p><strong>Tuesday, September 17</strong><br>
+                                <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
+                                Booth Reception (link to HTML invite) <br>
+                                Wells Fargo booth No. F87, Exhibition Hall Zone B (link to WF booth section) </p>
+                            <p><strong>Wednesday, September 18</strong><br>
+                                <strong>7:30 a.m. to 8:30
+                                    a.m.</strong><br>
+                                &ldquo;Rapidly evolving payment and trade corridors&rdquo;
+                                (link to HTML invite) <br>
+                                Space is limited, so please speak to your
+                                relationship manager about availability. </p>
+                            <p class="hide">How is the role of an IT leader
+                                changing to meet the challenges of delivering
+                                operational excellence in a world of ever-growing
+                                demands and relentless volatility? What is the
+                                impact of cultural, technology, and generation
+                                shifts? What skills and leadership styles do brave
+                                new leaders need to embrace and how is that
+                                different from the past?</p></td>
+                    </tr>
                 </table>
                 <p class="shrink">*You may need Adobe Reader to read PDF files. <a href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
                 <div class="popup">
@@ -107,7 +105,6 @@
                 <div class="popup">
                     <video id="george_vid" class="video-js vjs-default-skin" controls preload="" width="853" height="480" poster="">
                         <source src="../media/George_Doolittle-SIBOS_promo.mp4" type='video/mp4'>
-                        <track kind="captions" src="../media/George_Doolittle-SIBOS_promo.txt" srclang="en" label="English">
                     </video>
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE
@@ -115,35 +112,31 @@
                 <div class="popup">
                     <video id="steve_vid" class="video-js vjs-default-skin" controls preload="" width="853" height="480" poster="">
                         <source src="../media/Steve_Ellis-SIBOS_promo.mp4" type='video/mp4'>
-                        <track kind="captions" src="../media/Steve_Ellis-SIBOS_promo.txt" srclang="en" label="English">
                     </video>
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE
                 </div>
-            </div>
-            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
-                    <!-- <script src="http://w.sharethis.com/button/buttons.js"></script> -->
-                    <p class="cap">Share this page
-                        <!-- -->
+                    <p class="cap">Share this page 
+                        <!--  -->
                         <span id="st_twitter"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_linkedin"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_email"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_facebook"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_googleplus"></span>
-                        <!-- -->
+                        <!--  -->
                         <span id="st_pinterest"></span>
-                        <!-- -->
+                        <!--  -->
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem -->
-        </div>
+            <!-- #EndLibraryItem --></div>
     </body>
 </html>
