--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title id="head0">Wells Fargo at Sibos 2012</title>
         <script src="../scripts/metas.js"></script>
-
+        <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
@@ -18,7 +18,8 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page">
+            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -42,7 +43,8 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem --><div id="feature">
+            <!-- #EndLibraryItem -->
+            <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/home.png" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
@@ -70,9 +72,14 @@
                         <td class="blocks"><p><strong>&lt;placeholder for tile ad&gt;</strong><br>
                                  Share your pony story with us <br>
                                 #WFpony</p>
-                            <p class="hide">How is the role of an IT leader changing to meet the challenges of delivering operational excellence in a world of ever-growing
-                                demands and relentless volatility? What is the impact of cultural, technology, and generation shifts? What skills and
-                                leadership styles do brave new leaders need to embrace and how is that different from the past?</p></td>
+                            <p class="hide">How is the role of an IT leader
+                                changing to meet the challenges of delivering
+                                operational excellence in a world of ever-growing
+                                demands and relentless volatility? What is the
+                                impact of cultural, technology, and generation
+                                shifts? What skills and leadership styles do brave
+                                new leaders need to embrace and how is that
+                                different from the past?</p></td>
                         <td>&nbsp;</td>
                         <td class="blocks"><p><strong>Risk management: From grapple to grip</strong><br>
                                 <strong>Wednesday, September 18</strong><br>
