--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title id="head0">Wells Fargo at Sibos 2012</title>
         <script src="../scripts/metas.js"></script>
-
+        <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
@@ -18,7 +18,8 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page">
+            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -42,7 +43,8 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem --><div id="feature">
+            <!-- #EndLibraryItem -->
+            <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/aboutWellsFargoPage.png" alt="">
                     <img class="banner" src="../images/header/reins.png" alt="">
@@ -55,7 +57,7 @@
                     <tr>
                         <td width="65%" rowspan="2"><p>Wells Fargo is one of the largest banks in the United States,
                                 and is the most valuable bank in the world in terms of market capitalization.
-                                Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
+                                Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
                                 mortgage, consumer, and commercial finance through various distribution channels. We have offices in more than
                                 35 countries to support customers who conduct business in the global economy. </p>
                             <p>Wells Fargo serves one in three businesses in America.
@@ -73,8 +75,7 @@
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/csr/reports/2012-social-responsibility-interim.pdf">Social Responsibility report</a></li>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/press/2q13pr.pdf">Latest earnings report</a></li>
-                            </ul>
-                            <p>&nbsp;</p></td>
+                            </ul></td>
                     </tr>
                     <tr>
                         <td colspan="2"><p><strong>Our global presence includes: </strong></p>
@@ -87,6 +88,11 @@
                                 <li>Customers in over 125 countries</li>
                             </ul>
                             <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
                 </table>
