--- a/pages/booth.html
+++ b/pages/booth.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title id="head0">Wells Fargo at Sibos 2012</title>
         <script src="../scripts/metas.js"></script>
-
+        <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
@@ -18,7 +18,8 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page">
+            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -42,18 +43,20 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem --><div id="feature">
+            <!-- #EndLibraryItem -->
+            <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/home.png" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                     <tr>
-                        <td colspan="2"><h2>Wells Fargo Booth</h2></td>
+                        <td><h2>Wells Fargo Booth</h2></td>
+                        <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td><p>As a repeat exhibitor, Wells Fargo is excited to bring you a booth
+                        <td class="blocks"><p>As a repeat exhibitor, Wells Fargo is excited to bring you a booth
                                 experience like no other. We look forward to seeing you at booth <u>No.
                         F87</u>.</p>
                     <p><strong>Learn. </strong>Stop by to take your picture in front of the
@@ -68,7 +71,7 @@
                           href="../images/misc/rendered_booth.jpg">View Wells Fargo booth
                             rendering</a></p></td>
                     <td>&nbsp;</td>
-                    <td width="33%"><p>
+                    <td><p>
                             <img src="../images/pix/tile_booth_giveaway.png" width="320" height="254" alt="Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
                         </p></td>
                     </tr>
@@ -104,7 +107,8 @@
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE
                 </div>
-            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div>
+            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
                     <p class="cap">Share this page
@@ -125,6 +129,7 @@
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem --></div>
+            <!-- #EndLibraryItem -->
+        </div>
     </body>
 </html>
