--- a/pages/explore.html
+++ b/pages/explore.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title id="head0">Wells Fargo at Sibos 2012</title>
         <script src="../scripts/metas.js"></script>
-
+        <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
@@ -18,7 +18,8 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page">
+            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -42,7 +43,8 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem --><div id="feature">
+            <!-- #EndLibraryItem -->
+            <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/exploreDubaiPage.png" alt="">
                     <img class="banner" src="../images/header/reins.png" alt="">
@@ -88,6 +90,11 @@
                     <tr>
                         <td width="7%">&nbsp;</td>
                         <td width="21%">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
                     </tr>
                 </table>
             </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
