--- a/pages/giving.html
+++ b/pages/giving.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title id="head0">Wells Fargo at Sibos 2012</title>
         <script src="../scripts/metas.js"></script>
-
+        <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
@@ -18,7 +18,8 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page">
+            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -42,21 +43,21 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem --><div id="feature">
+            <!-- #EndLibraryItem -->
+            <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/home.png" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                     <tr>
-                        <td>&nbsp;</td>
+                        <td><h3>TBD</h3>
+                            <p>&nbsp;</p></td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
                         <td width="70%" rowspan="4"><div id="Charitable">
-                                <h3>TBD</h3>
-                                <br>
                                 <div class="part">
                                     <h2>Charitable Giving</h2>
                                     <p>At Wells Fargo, we understand that
@@ -89,16 +90,16 @@
                                         Fargo will donate a total of USD $10,000 to
                                         these four charities based on your votes.</p>
                                     <!-- <h4>Click on each nonprofit to learn more:</h4>
-                                        <ul>
-                                            <li><a class="part" href="#cemina">CEMINA</a> —
-                                                helping farmers adapt to climate change in Brazil.</li>
-                                            <li><a class="part" href="#h4hi">Habitat for Humanity International</a> —
-                                                providing housing for low-income families around the world.</li>
-                                            <li><a class="part" href="#jen">JEN</a> —
-                                                provides economical and mental support to people who have been stricken with hardship.</li>
-                                            <li><a class="part" href="#stc">Save the Children</a> —
-                                                works to resolve struggles that children face every day — poverty, hunger, illiteracy, and disease.</li>
-                                        </ul> -->
+                                            <ul>
+                                                <li><a class="part" href="#cemina">CEMINA</a> —
+                                                    helping farmers adapt to climate change in Brazil.</li>
+                                                <li><a class="part" href="#h4hi">Habitat for Humanity International</a> —
+                                                    providing housing for low-income families around the world.</li>
+                                                <li><a class="part" href="#jen">JEN</a> —
+                                                    provides economical and mental support to people who have been stricken with hardship.</li>
+                                                <li><a class="part" href="#stc">Save the Children</a> —
+                                                    works to resolve struggles that children face every day — poverty, hunger, illiteracy, and disease.</li>
+                                            </ul> -->
                                 </div>
                                 <div id="cemina" class="part" style="display: none;">
                                     <p class="shrink" style="float: right;">&lt; <a href="giving.html">Charitable giving</a></p>
@@ -170,22 +171,6 @@
                                     <ul>
                                         <li>Served 13,503 families in 18 countries
                                             in Africa and the Middle East.</li>
-                                        <li>Habitat partners with established
-                                            microfinance institutions to provide
-                                            low-income families with housing loans
-                                            through the MicroBuild fund; in India
-                                            alone, more than 60,000 families will be
-                                            the recipients of these small loans over
-                                            the next five years. </li>
-                                        <li>In Europe and Central Asia, the “I
-                                            Rebuild Hope” campaign raised more than
-                                            $550,000 in cash and $290,000 in
-                                            construction materials in response to the
-                                            Romanian floods in 2010. </li>
-                                        <li>In 2011, the Latin American and
-                                            Caribbean regions saw 5,734 new homes
-                                            built, 3,478 homes rehabilitated, and
-                                            5,422 more repaired. </li>
                                     </ul>
                                     <p><em>To learn more, visit <a href="http://www.habitat.org/" target="_blank">habitat.org</a>.</em></p>
                                 </div>
@@ -221,13 +206,6 @@
                                         </a> </p>
                                     <ul>
                                         <li>Provide soup kitchens to address food shortage issues. </li>
-                                        <li>Move sludge from homes devastated by the tsunami. </li>
-                                        <li>Support displaced people in camps,
-                                            while supporting a return to their own
-                                            houses. </li>
-                                        <li>Assess needs to improve the quality of
-                                            life of people affected by earthquakes and
-                                            tsunami through long-term planning.</li>
                                     </ul>
                                     <p><em>To learn more, visit <a href="http://www.jen-npo.org/en/index.php" target="_blank">jen-npo.org</a>. </em></p>
                                 </div>
@@ -262,9 +240,6 @@
                                         </a> </p>
                                     <ul>
                                         <li>Reached over 850,000 people, including 250,000 with vital, lifesaving health work.</li>
-                                        <li>Works hard to strengthen the government’s health system through training of local community health workers. </li>
-                                        <li>Continues to work with children in the Dadaab refugee camp (the world’s largest refugee camp) who have been deeply affected by
-                                            the ongoing civil war in Somalia. </li>
                                     </ul>
                                     <p><em>To learn more, visit <a href="http://www.savethechildren.org/" target="_blank">savethechildren.org</a>.</em></p>
                                 </div>
@@ -293,7 +268,8 @@
                             </div></td>
                     </tr>
                 </table>
-            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div>
+            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
                     <p class="cap">Share this page
@@ -314,6 +290,7 @@
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem --></div>
+            <!-- #EndLibraryItem -->
+        </div>
     </body>
 </html>
