--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title id="head0">Wells Fargo at Sibos 2012</title>
         <script src="../scripts/metas.js"></script>
-
+        <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
@@ -18,7 +18,8 @@
         <script src="../scripts/main.js"></script>
     </head>
     <body>
-        <div id="Page"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+        <div id="Page">
+            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
@@ -42,7 +43,8 @@
                     <!--  -->
                 </div>
             </header>
-            <!-- #EndLibraryItem --><div id="feature">
+            <!-- #EndLibraryItem -->
+            <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/home.png" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
@@ -65,54 +67,40 @@
                         <td class="blocks ribron"><a class="learn" href="giving.html">learn more</a>
                             <h3>Get involved</h3></td>
                         <td>&nbsp;</td>
-                        <td rowspan="2" style="position: relative;"><p><span class="blocks" style="position: relative;"><span class="blocks" style="position: relative;"><span class="blocks" style="position: relative;"><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
-                                                <img src="../images/text/4B06.png" width="239" height="74" alt="Booth 4B06">
-                                            </a></span></span></span><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
-                                    <img src="../images/text/4B06.png" width="239" height="74" alt="Booth 4B06">
+                        <td rowspan="2" class="blocks" style="position: relative;"><p><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
+                                    <img src="../images/banners/booth.png" width="320" height="128" alt="Booth 4B06">
+                                </a></p>
+                            <p><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
+                                    <img src="../images/banners/momentum.png" width="320" height="164" alt="Magazine">
                                 </a></p></td>
                     </tr>
                     <tr>
-                        <td
-                            class="blocks"><p><strong>Sunday, October 28</strong><br>
-                                5:00 p.m. – 8:00 p.m.<br>
-                                <a
-                                    href="../email/727872/index.html">Annual Sibos
-                                    Celebration</a><br>
-                                Taiko-en<br>
-                                Space is limited, <a
-                                    href="../email/727872/index.html">RSVP here</a>.</p>
-                            <p><strong>Tuesday, October 30</strong><br>
-                                <em>Transparency: The new paradigm impacting Global
-                                    Transaction Banking</em><br>
-                                3:00 p.m. – 4:00 pm<br>
-                                Katsura Room L5<br>
-                                Hyatt Regency Hotel<br>
-                                Space is
-                                limited, <a href="../email/734818/index.html"> RSVP
-                                    here</a>. <em><br>
-                                    Please speak with your relationship
-                                    manager about availability.</em></p>
-                            <p><strong>Tuesday, October 30</strong><br>
-                                4:00 p.m. – 5:30 p.m.<br>
-                                <a href="../email/727874/index.html">Booth reception</a><br>
-                                Wells Fargo booth No. 4B06, Hall 4 </p></td>
-                        <td style="position: relative;">&nbsp;</td>
-                        <td class="blocks" style="position: relative;"><p>
-                                <img  src="../images/photos/bird.png" alt="bird" width="93" height="90" style="
-
-                                      bottom: -11px;
-                                      float: right;
-                                      right: -11px;
-
-                                      ">
-                                Wells Fargo is proud to partner with <a href="http://www.globalgiving.org/">GlobalGiving.org</a> again
-                                to offer you a wonderful program that gives back to our communities.</p></td>
+                        <td class="blocks"><p>
+                                <img src="../images/banners/tile_home_events.png" width="307" height="120">
+                            </p>
+                            <p><strong>Renew friendships and create new ones. </strong></p>
+                            <p>We’re proud to be hosting our annual Sibos
+                                Celebration reception at Dubai’s most prestigious
+                                landmark – Burj Khalifa – the tallest structure in
+                                the world. In addition, we’ll be hosting a welcome
+                                reception at the Wells Fargo Sibos booth and a
+                                breakfast seminar on “Rapidly evolving payment and
+                                trade corridors.” </p></td>
+                        <td>&nbsp;</td>
+                        <td class="blocks"><p>
+                                <img src="../images/banners/tile_home_getInvolved.png" width="225" height="121">
+                            </p>
+                            <p><strong>By working together, we can make a
+                                    difference in our international communities. </strong></p>
+                            <p>You are invited, for the third year in a row,
+                                to cast a vote for one of four nonprofits that
+                                make a difference around the world. </p></td>
                         <td style="position: relative;">&nbsp;</td>
                     </tr>
                     <tr>
-                        <td width="33%" class="blocks">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
                         <td width="1%">&nbsp;</td>
-                        <td width="33%" class="blocks">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
                         <td width="1%">&nbsp;</td>
                         <td width="33%" style="position: relative;">&nbsp;</td>
                     </tr>
@@ -122,7 +110,8 @@
                     <br>
                     CLICK OUTSIDE IMAGE TO CLOSE
                 </div>
-            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div>
+            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
                     <p class="cap">Share this page
@@ -143,6 +132,7 @@
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem --></div>
+            <!-- #EndLibraryItem -->
+        </div>
     </body>
 </html>
