--- a/pages/booth.html
+++ b/pages/booth.html
@@ -72,7 +72,7 @@
                             rendering</a></p></td>
                     <td>&nbsp;</td>
                     <td><p>
-                            <img src="../images/pix/tile_booth_giveaway.png" width="320" height="254" alt="Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
+                            <img src="../images/tile_booth_giveaway.png" width="320" height="254" alt="Check in to our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
                         </p></td>
                     </tr>
                     <tr>
@@ -84,12 +84,12 @@
                 <p class="shrink">*You may need a reader to view PDF files. <a
                         href="https://www.google.com/search?q=free+pdf+viewer">Download</a> one for free.</p>
                 <div class="popup">
-                    <img id="booth_map" src="../images/misc/booth_map.gif" width="1000" tabindex="-1">
+                    <img id="booth_map" src="../images/booth_map.gif" width="1000" tabindex="-1">
                     <br>
                     CLICK OUTSIDE IMAGE TO CLOSE
                 </div>
                 <div class="popup">
-                    <img id="rendered_booth" src="../images/misc/rendered_booth.jpg" tabindex="-1">
+                    <img id="rendered_booth" src="../images/booth_rendered.jpg" tabindex="-1">
                     <br>
                     CLICK OUTSIDE IMAGE TO CLOSE
                 </div>
