--- a/pages/home.html
+++ b/pages/home.html
@@ -51,13 +51,10 @@
                 </section>
                 <table>
                     <tr>
-                        <td colspan="5"><p>Thank you for visiting the Wells Fargo
-                                Sibos webpage. Once again, our Global Financial
-                                Institutions (GFI) team has an exciting program lined up
-                                for you during the week of the conference, and we look
-                                forward to seeing you in Dubai.</p>
-                            <p>For more information about Sibos 2013, please visit the
-                                official Sibos website at <a
+                        <td colspan="5"><p>Thank you for visiting the Wells Fargo Sibos webpage. Once again, our Global Financial
+                                Institutions (GFI) team has an exciting program lined up for you during the week of the conference,
+                                and we look forward to seeing you in Dubai.</p>
+                            <p>For more information about Sibos 2013, please visit the official Sibos website at <a
                                     href="http://www.sibos.com">sibos.com</a>. </p></td>
                     </tr>
                     <tr>
@@ -68,7 +65,7 @@
                             <h3>Get involved</h3></td>
                         <td>&nbsp;</td>
                         <td rowspan="2" class="blocks" style="position: relative;"><p><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
-                                    <img src="../images/banners/booth.png" width="320" height="128" alt="Booth 4B06">
+                                    <img src="../images/booth_F87.png" width="320" height="128" alt="Booth F87">
                                 </a></p>
                             <p><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
                                     <img src="../images/banners/momentum.png" width="320" height="164" alt="Magazine">
@@ -76,7 +73,7 @@
                     </tr>
                     <tr>
                         <td class="blocks"><p>
-                                <img src="../images/banners/tile_home_events.png" width="307" height="120">
+                                <img src="../images/tile_home_events.png" width="307" height="120">
                             </p>
                             <p><strong>Renew friendships and create new ones. </strong></p>
                             <p>We’re proud to be hosting our annual Sibos
@@ -88,7 +85,7 @@
                                 trade corridors.” </p></td>
                         <td>&nbsp;</td>
                         <td class="blocks"><p>
-                                <img src="../images/banners/tile_home_getInvolved.png" width="225" height="121">
+                                <img src="../images/tile_home_getInvolved.png" width="225" height="121">
                             </p>
                             <p><strong>By working together, we can make a
                                     difference in our international communities. </strong></p>
@@ -106,7 +103,7 @@
                     </tr>
                 </table>
                 <div class="popup">
-                    <img id="booth_map" src="../images/misc/booth_map.gif" tabindex="-1">
+                    <img id="booth_map" src="../images/booth_map.gif" tabindex="-1">
                     <br>
                     CLICK OUTSIDE IMAGE TO CLOSE
                 </div>
