--- a/pages/events.html
+++ b/pages/events.html
@@ -89,7 +89,7 @@
                         <p><strong>Tuesday, October 30</strong><br>
                             4:00 p.m. – 5:30 p.m.<br>
                             <a href="../email/727874/index.html">Booth reception</a><br>
-                            Wells Fargo booth No. 4B06, Hall 4 </p>
+                            Wells Fargo booth No. F87, Hall 4 </p>
                     <td>
                     <td class="blocks"><p><strong>Sunday, September 15 </strong><br>
                             <strong>4:00 p.m. to 7:00 </strong><strong>p.m.</strong> <br>
